# cppcc

./: LICENSE  README.md  代码改动.txt
config/setup/: IMainSetup.nsi  VersionCtrl.nsh  VersionCtrl.nsh.in  agree.rtf  agree_en.rtf
vs2017/: .gitignore  UpgradeLog.htm  control.sln
vs2017/PCH5/: .babelrc  .gitignore  .jsbeautifyrc  README.md  copy.bat  installer.nsi  installerUpdate.nsi  package.json  versionctrl.nsh  webpack.config.js  webpack.renderer.log.js
vs2017/PCH5/builds/linux/: CMakeLists.txt  Linkdood.desktop  Linkdood.sh  bash.sh  build.sh  h5_clone.sh  h5_dist.sh  postinst  postrm  preinst  prerm
vs2017/PCH5/builds/linux/doc/LinkdoodSetup/: copyright
vs2017/PCH5/pcdist/: bundle.js  index.html
vs2017/PCH5/src/: index.ejs  indexEmss.ejs  indexrtc.ejs
vs2017/PCH5/vrv-static/: index.js  package.json
vs2017/build-app-Desktop_Qt_5_12_1_MSVC2017_32bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
vs2017/clientsdk/include/: ServiceDefine.h
vs2017/clientsdk/lib/: control.lib
vs2017/control/appmgrcontrol/: AppMgrControl.cpp  AppMgrControl.h  CMakeLists.txt  appmgrcontrol.vcxproj  appmgrcontrol.vcxproj.filters
vs2017/control/authcontrol/: AuthControl.cpp  AuthControl.h  CMakeLists.txt  authcontrol.vcxproj  authcontrol.vcxproj.filters  utils.vcxproj.filters
vs2017/control/chatmgrcontrol/: CMakeLists.txt  ChatMgrControl.cpp  ChatMgrControl.h  ChineseInfos.hpp  EmojiExpress.cpp  EmojiExpress.h  EncryptKey.cpp  GlobalDef.h  IDRangeJuge.hpp  InstructExpress.cpp  InstructExpress.h  ParseJsonData.cpp  ParseJsonData.h  chatmgrcontrol.vcxproj  chatmgrcontrol.vcxproj.filters
vs2017/control/clouddisk/: AuthMemListWidget.cpp  AuthMemListWidget.h  AuthMemberListWnd.cpp  AuthMemberListWnd.h  AuthMemberSelWnd.cpp  AuthMemberSelWnd.h  CMakeLists.txt  ChangePermissionWindow.cpp  ChangePermissionWindow.h  CloudDisk.cpp  CloudDisk.h  CloudDiskUploadWnd.cpp  CloudDiskUploadWnd.h  CloudDiskWidget.cpp  CloudDiskWidget.h  ContactListWidget.cpp  ContactListWidget.h  CreateFolderWindow.cpp  CreateFolderWindow.h  FileListWidget.cpp  FileListWidget.h  LeftWidget.cpp  LeftWidget.h  OrgListWidget.cpp  OrgListWidget.h  ProgressWindow.cpp  ProgressWindow.h  clouddisk.vcxproj  clouddisk.vcxproj.filters  dllmain.cpp
vs2017/control/clouddisk/Common/: Common.h  Define.h  EncryptKey.cpp  EncryptKey.h  RegisterUserData.h  ServiceDefine.h
vs2017/control/clouddisk/Controls/: CloudDiskMenu.cpp  CloudDiskMenu.h  DefaultWidget.cpp  DefaultWidget.h  ElidedLabel.cpp  ElidedLabel.h  FailedItem.cpp  FailedItem.h  LocalSearchLineEdit.cpp  LocalSearchLineEdit.h  MyLineEdit.cpp  MyLineEdit.h  MyMessageBox.cpp  MyMessageBox.h  MyTreeWidget.cpp  MyTreeWidget.h  MyTreeWidgetItem.cpp  MyTreeWidgetItem.h  NoFocusDelegate.h  ProgressWidget.cpp  ProgressWidget.h  ProgressWidgetItem.cpp  ProgressWidgetItem.h  ProgressingItem.cpp  ProgressingItem.h  PushButton.cpp  PushButton.h  QClickLabel.cpp  QClickLabel.h  SuccessItem.cpp  SuccessItem.h  TWidget.cpp  TWidget.h  TableWidget.cpp  TableWidget.h  TableWidgetItem.cpp  TableWidgetItem.h  TitleBar.cpp  TitleBar.h  ToolButton.cpp  (+3 more)
vs2017/control/clouddisk/Interface/: Exports.h  ICloudDisk.h
vs2017/control/clouddisk/Resources/: clouddisk.qrc
vs2017/control/clouddisk/Resources/qss/: clouddisk.qss
vs2017/control/clouddisk/Utils/: utils.cpp  utils.h
vs2017/control/contactmgrcontrol/: CMakeLists.txt  ContactMgrControl.cpp  ContactMgrControl.h  contactmgrcontrol.vcxproj  contactmgrcontrol.vcxproj.filters
vs2017/control/controlmanager/: CMakeLists.txt  control.vcxproj  control.vcxproj.filters
vs2017/control/entmgrcontrol/: CMakeLists.txt  EntMgrControl.cpp  EntMgrControl.h  entmgrcontrol.vcxproj  entmgrcontrol.vcxproj.filters
vs2017/control/groupmgrcontrol/: CMakeLists.txt  GroupMgrControl.cpp  GroupMgrControl.h  groupmgrcontrol.vcxproj  groupmgrcontrol.vcxproj.filters
vs2017/control/sysmsgcontrol/: CMakeLists.txt  SysMsgMgrControl.cpp  SysMsgMgrControl.h  sysmsgcontrol.vcxproj  sysmsgcontrol.vcxproj.filters
vs2017/control/updatecontrol/: CMakeLists.txt  UpdateControl.cpp  UpdateControl.h  updatecontrol.vcxproj  updatecontrol.vcxproj.filters
vs2017/control/usercontrol/: CMakeLists.txt  UserControl.cpp  UserControl.h  usercontrol.vcxproj  usercontrol.vcxproj.filters
vs2017/log/: log.h  log.lib  logd.lib
vs2017/screenshot/: CMakeLists.txt  DrawShapeWidget.cpp  DrawShapeWidget.h  FullScreenWidget.cpp  FullScreenWidget.h  ScreenShotClient.cpp  ScreenShotClient.h  main.cpp  res.qrc  resource.h  screenshot.aps  screenshot.pro  screenshot.rc  screenshot.vcxproj  screenshot.vcxproj.filters
vs2017/screenshot/GeneratedFiles/: moc_DrawShapeWidget.cpp  moc_FullScreenWidget.cpp  moc_ScreenShotClient.cpp  qrc_res.cpp
vs2017/sdk/jssdk/: vrv-jssdk.js
vs2017/test/: testWeb.htm
vs2017/ui/: MyRsa.lib  MyWebForm.cpp  MyWebView.ui  app.pro  app.vcxproj  app.vcxproj.filters  main.cpp  readme.txt
vs2017/ui/Resources/: emojiface.qrc  emojikey.qrc  linkdood.qrc  smilies.qrc
vs2017/ui/common/: ChineseInfos.cpp  ChineseInfos.h  ChineseInfos.hpp  Common.h  Connect.h  Controlptr.h  Md5.cpp  Md5.h  MsgTimeDeal.hpp  PageSizeDataItem.hpp  ServiceInfos.hpp  UIUtils.cpp  UIUtils.h
vs2017/ui/controls/: AvatarWidget.cpp  AvatarWidget.h  BaseQListWidget.cpp  BaseQListWidget.h  Button.cpp  Button.h  ChatEdit.cpp  ChatEdit.h  CircleProgressBar.cpp  CircleProgressBar.h  ClickQLabel.cpp  ClickQLabel.h  ClipImageWidget.cpp  ClipImageWidget.h  ClipWidget.cpp  ClipWidget.h  DefaultWidget.cpp  DefaultWidget.h  DragScrollArea.cpp  DragScrollArea.h  ElidedLabel.cpp  ElidedLabel.h  HotKeyLineEdit.cpp  HotKeyLineEdit.h  IconButton.cpp  IconButton.h  Label.cpp  Label.h  LoadingDataWidget.cpp  LoadingDataWidget.h  (+43 more)
vs2017/utils/: CMakeLists.txt  Error.cpp  Error.h  Hardware.cpp  Hardware.h  PinYinConvert.cpp  PinYinConvert.h  Singleton.hpp  aes.cpp  aes.h  common.cpp  common.h  dircompress.cpp  dircompress.h  functionconfig.cpp  functionconfig.h  log.h  parson.c  parson.h  resource.h  rijndael.cpp  rijndael.h  utils.aps  utils.vcxproj  utils.vcxproj.filters
(+1498 files in other folders)
